--- a/lib/droplet/droplet.css
+++ b/lib/droplet/droplet.css
@@ -157,7 +157,7 @@
   z-index: 10;
 }
 .droplet-main-scroller-intermediary {
-  z-index; 10;
+  z-index: 10;
   min-width: 100%;
   min-height: 100%;
 }
@@ -388,8 +388,8 @@ text {
   opacity: 1;
 }
 .droplet-socket-selected {
-  fill: '#88F'
-  stroke: '#88F'
+  fill: #88F;
+  stroke: #88F;
 }
 .droplet-buttonContainer-path {
   display: none;
