--- a/lib/droplet/droplet.css
+++ b/lib/droplet/droplet.css
@@ -9,8 +9,8 @@
   margin-top: -2px;
   margin-left: -1px;
   opacity: 0.85;
-  -webkit-filter: drop-shadow( 5px 5px 5px #888 );
-  filter: drop-shadow( 5px 5px 5px #888 ); /* Same syntax as box-shadow */
+  -webkit-filter: drop-shadow( 5px 5px 5px rgba(0, 0, 0, 0.5) );
+  filter: drop-shadow( 5px 5px 5px rgba(0, 0, 0, 0.5) ); /* Same syntax as box-shadow */
 }
 .droplet-palette-canvas {
   z-index: 1;
@@ -87,7 +87,7 @@
   top: 0;
   left: 0;
   width: 100%;
-  background-color: #FFF;
+  background-color: inherit;
   border-spacing: 4px;
 }
 .droplet-palette-header {
@@ -157,7 +157,7 @@
   z-index: 10;
 }
 .droplet-main-scroller-intermediary {
-  z-index: 10;
+  z-index; 10;
   min-width: 100%;
   min-height: 100%;
 }
@@ -388,8 +388,8 @@ text {
   opacity: 1;
 }
 .droplet-socket-selected {
-  fill: #88F;
-  stroke: #88F;
+  fill: '#88F'
+  stroke: '#88F'
 }
 .droplet-buttonContainer-path {
   display: none;
@@ -404,6 +404,8 @@ text {
   height: 30px;
   border: 1px solid #888;
   border-radius: 2px;
+  background-color: inherit;
+  color: inherit;
 }
 .droplet-loading-glyph-wrapper {
   background: #DDD;
